<resources>
    <string name="subject">아름답고 반복되는 동영상을\n직접 공유하세요.</string>
    <string name="com_sina_weibo_sdk_login_with_weibo_account">用微博登录</string>
    <string name="com_sina_weibo_sdk_login">登录</string>
    <string name="com_sina_weibo_sdk_logout">注销</string>
    <string name="pull_to_refresh_pull_label" />
    <string name="pull_to_refresh_release_label" />
    <string name="pull_to_refresh_refreshing_label" />
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="app_name">13S</string>
    <string name="duration">200</string>
    <string name="a_moment_ago">금방</string>
    <string name="minutes_ago">분전</string>
    <string name="hours_before">시간전</string>
    <string name="days_ago">일전</string>
    <string name="taday">오늘</string>
    <string name="yesterday">어제</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">더보기</string>
    <string name="xlistview_footer_hint_ready">더보기</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="com.crashlytics.android.build_id">d5d13988-bd3f-4057-a962-803402b0447f</string>
    <string name="np_number_picker_increment_scroll_mode">%s tap and hold.</string>
    <string name="np_number_picker_increment_scroll_action">Slide up to increment and down to decrement.</string>
    <string name="np_number_picker_increment_button">Increment</string>
    <string name="np_number_picker_decrement_button">Decrement</string>
    <string name="rc_notification_send">发来了</string>
    <string name="rc_notification_msg">条消息</string>
    <string name="rc_notification_contact">个联系人</string>
    <string name="rc_notification_ticker_text">您有了一条新消息</string>
    <string name="facebook_app_id">1578108155789321</string>
    <string name="menuitem_delete">删除好友</string>
    <string name="menuitem_is_block">解除屏蔽</string>
    <string name="menuitem_remark">备注</string>
    <string name="menuitem_add">添加好友</string>
    <string name="menuitem_not_block">屏蔽私信</string>
    <string name="private_chat">채팅</string>
    <string name="hasfollow">已关注</string>
    <string name="hot">最热</string>
    <string name="newest">最新</string>
    <string name="search_label">search_label</string>
    <string name="search_hint">Tutu号/昵称</string>
    <string name="search_my_tutu">我的Tutu号:%s</string>
    <string name="personal_my_tutu_bar">Tu号:%s</string>
    <string name="search_my_tutu_null">游客身份登录</string>
    <string name="have_no_friends">尚未添加任何好友</string>
    <string name="search_no_friends">Tutu找不到这个人</string>
    <string name="nearby_no_friends">不好意思，附近还没有小伙伴哦~</string>
    <string name="search_key_null">请先输入Tutu号</string>
    <string name="show_search">搜索:</string>
    <string name="add_same_city_friends">添加通讯录好友</string>
    <string name="add_qq_friends">添加QQ好友</string>
    <string name="add_wechat_friends">添加微信好友</string>
    <string name="topic_new_location">添加位置</string>
    <string name="subject_users_count">%s人参与讨论</string>
    <string name="personal_news_text">팔로잉</string>
    <string name="personal_chats_text">消息</string>
    <string name="personal_works_null">这家伙懒出翔了</string>
    <string name="comment_content_null_tip">请输入评论内容…</string>
    <string name="comment_close_tip">취소</string>
    <string name="comment_send_tip">发送</string>
    <string name="network_error_tip">网络卡出翔~</string>
    <string name="comment_reply_tip">回复</string>
    <string name="send_comment_tip">发表评论</string>
    <string name="tabview_texttab">게시물</string>
    <string name="search_same_cityhint">城市</string>
    <string name="comment_tip_text">点击图片可以发送文字、表情！</string>
    <string name="bind_phone_text">已启用手机通讯录匹配。如果您的通讯录有朋友注册了Tutu，系统会通知您。</string>
    <string name="unbind_phone_text">绑定手机号可以帮你寻找好友，并提升Tutu的安全性</string>
    <string name="unbind_phone_title">您还没有绑定手机号！</string>
    <string name="bind_phone_valite_title">당신의 이메일주소는 인증을 위해 필요합니다. 비법적인 용도로 사용하지 않습니다.</string>
    <string name="bind_phone_set_password_title">비밀번호설정</string>
    <string name="topic_detail_del_topic_tip">主人,你真的不要我了吗?</string>
    <string name="topic_detail_del_fav_tip">主人，都收藏了这么久，您确定要取消收藏吗？</string>
    <string name="topic_del_comment">确定要删除评论吗？</string>
    <string name="chat_camera_tip">拍摄</string>
    <string name="chat_photo_tip">相册</string>
    <string name="chat_start_voice_tip">按住说话，松开即可发送</string>
    <string name="chat_end_voice_tip">手指上滑，取消发送</string>
    <string name="emtpy_bolck_topic_tip">善良的你还没有屏蔽任何内容哦~</string>
    <string name="empty_friend_tip">一个Tu友都没有感觉心塞塞的...</string>
    <string name="emtpy_bolck_private_tip">还没有讨厌的人存在哦~</string>
    <string name="empty_private_has_import_tip">有历史聊天记录，请到“设置 -> 隐私 -> 聊天记录下载”中下载之前的聊天记录。</string>
    <string name="empty_private_tip">还没有私信，先去和其他Tu友搭讪吧~</string>
    <string name="empty_news_tips">새로운 내용이 없습니다.</string>
    <string name="empty_news_at_tips">还没有小伙伴@你哟，去勾搭一下吧。</string>
    <string name="empty_news_zan_tips">呜呜~还没有人赞过你，多发些主题试试吧！</string>
    <string name="empty_news_comment_tips">木有人评论你，快去跟小伙伴们互动一下吧。</string>
    <string name="empty_news_follow_tips">还没有人关注你，快去处个Tu友吧。</string>
    <string name="empty_news_tips_net">네트워크 오류, 다시 시도해주세요.~</string>
    <string name="empty_other_follows_tips">高冷的他还没有关注任何人，快去征服他！</string>
    <string name="empty_topic_tip">主人！不发照片是没有小伙伴勾搭的呦~</string>
    <string name="empty_other_topic_tip">这位小伙伴有点懒，还没有发照片！</string>
    <string name="empty_other_topic_tip_feng">Ta发了不良信息,被封号了！</string>
    <string name="empty_fav_tip">主人！这里什么都米有！快去收藏喜欢的内容吧！</string>
    <string name="empty_follow_tip">你还没有任何关注哦！</string>
    <string name="error_network_tip">这家伙懒出翔了</string>
    <string name="error_network_refresh_tip">这家伙懒出翔了.点我重新加载...</string>
    <string name="fav_tip">收藏成功，请在个人主页查看收藏！</string>
    <string name="block_tip">屏蔽成功，可以在设置中解除屏蔽！</string>
    <string name="topic_detail_tip_has_data">加载出来%1$d条评论</string>
    <string name="topic_detail_tip_no_data">已经是最新的了</string>
    <string name="topic_switch_comment_tip">您已经关闭视频上的评论</string>
    <string name="topic_delete_success_tip">删除成功！</string>
    <string name="topic_delete_fav_success_tip">取消收藏成功！</string>
    <string name="send_add_friends_success_tip">发送成功</string>
    <string name="home_hot_comment_tip">인기댓글</string>
    <string name="upload_topic_tips">正在发布中...</string>
    <string name="upload_topic_failure_tip">发送失败，网络卡出翔~</string>
    <string name="upload_topic_error_tip">发送失败，帐号已被冻结(︶︿︶)</string>
    <string name="footer_hint_normal_text">没有更多了</string>
    <string name="no_selected_pic">亲, 您还没有选择用于制作视频的照片!</string>
    <string name="play_video_error">制作视频错误,无法播放</string>
    <string name="recoder_error">Tutu暂时不支持此设备视频功能，请关注版本更新！</string>
    <string name="camera_open_tip">열기</string>
    <string name="camera_close_tip">닫기</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="exite_tutu">确定要退出Tutu吗？</string>
    <string name="login_tutu">로그인하세요.</string>
    <string name="copy">复制</string>
    <string name="copy_tutu_success">复制Tutu号成功</string>
    <string name="copy_success">复制成功</string>
    <string name="update_fail">呜呜，网络出现问题，修改失败...</string>
    <string name="err_tips">오류현시</string>
    <string name="err_tips_fail">错误提示</string>
    <string name="block_private">屏蔽他（她）的私信</string>
    <string name="unblock_private">解除屏蔽他（她）的私信</string>
    <string name="block_content">屏蔽他（她）的内容</string>
    <string name="unblock_content">解除屏蔽他（她）的内容</string>
    <string name="delete">删除</string>
    <string name="verfity_code">인증코드입력</string>
    <string name="phone_code">당신의 이메일주소 </string>
    <string name="receive_message">，인증코드가 발송되였습니다.</string>
    <string name="resend">重新发送</string>
    <string name="sd_disable">SD卡不可用</string>
    <string name="sd_full">sd卡已满无法完成裁切</string>
    <string name="phone_verify">이메일인증</string>
    <string name="login_ing">로그인중...</string>
    <string name="login">로그인</string>
    <string name="qq_login">QQ账号</string>
    <string name="qq_login_ing">QQ账号登录中...</string>
    <string name="qq_login_err">QQ联合登录失败,请稍后重试</string>
    <string name="update_password">修改密码</string>
    <string name="update_success">修改成功</string>
    <string name="password_no_less_6">비밀번호는 최소6자이상이여야합니다.</string>
    <string name="password_diffrent">비밀번호가 일치하지 않습니다.</string>
    <string name="password_no_null">密码不能为空</string>
    <string name="net_err">网络异常</string>
    <string name="news">상태</string>
    <string name="please_enter_text">您还没有输入文字</string>
    <string name="please_enter_12_text">请输入12个字以内</string>
    <string name="please_enter_20_text">请输入20个字以内</string>
    <string name="user_no_login">用户未登录</string>
    <string name="connect_err">连接失败</string>
    <string name="connect_ing">连接中...</string>
    <string name="press_talk">按住说话，请重试</string>
    <string name="send_err">发送失败</string>
    <string name="receive_ing">收取中...</string>
    <string name="reset_password">비밀번호설정</string>
    <string name="sure_password">비밀번호확인</string>
    <string name="reset">확인</string>
    <string name="set_password">비밀번호설정</string>
    <string name="set_nickname">닉네임입력</string>
    <string name="set_password_less_6">비밀번호설정, 최소6자리 영문숫자조합.</string>
    <string name="finish">확인</string>
    <string name="nickname_less_2">닉네임은 2~4자리의 한글이여야 합니다.</string>
    <string name="sure_delete">您确定要删除</string>
    <string name="sure_cancel_follow">确定取消关注？</string>
    <string name="ma">吗？</string>
    <string name="report_success">举报成功</string>
    <string name="wu_wu">呜呜，失败了。</string>
    <string name="update_remark_name_faile">修改备注失败呃...</string>
    <string name="check_update_ing">正在检查更新...</string>
    <string name="share_to">分享到</string>
    <string name="fav">팔로잉</string>
    <string name="real_search_back">取消</string>
    <string name="cancel">닫기</string>
    <string name="camera">사진</string>
    <string name="tutu_friends">Tutu好友</string>
    <string name="qq_friend">QQ好友</string>
    <string name="qq_space">QQ空间</string>
    <string name="weixin_friend">微信好友</string>
    <string name="weixin_cirlce">朋友圈</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="block_content_tip">屏蔽</string>
    <string name="report_content_tip">举报</string>
    <string name="copy_link_tip">复制链接</string>
    <string name="cancle_tip">取消</string>
    <string name="chat_pop_tv_delete">清除私信</string>
    <string name="dlg_wall_change_selecte">更换主页封面?</string>
    <string name="dlg_from_picture">从相册里选择</string>
    <string name="dlg_from_system">精选主页封面</string>
    <string name="dialog_private_chat_report">举报此人</string>
    <string name="facebook">FaceBook</string>
    <string name="twitter">Twitter</string>
    <string name="square_sunday">日</string>
    <string name="square_monday">一</string>
    <string name="square_tuesday">二</string>
    <string name="square_wednesday">三</string>
    <string name="square_thursday">四</string>
    <string name="square_friday">五</string>
    <string name="square_saturday">六</string>
    <string name="news_notification_show_all">所有人提醒</string>
    <string name="news_notification_show_follow">仅关注的人提醒</string>
    <string name="news_notification_unshow">不提醒</string>
    <string name="reg_finish">회원가입 완료</string>
    <string name="welcome"><B>%1$s</B>님\n회원가입을 축하합니다.</string>
    <string name="check_mail">입력해주신 이메일로 회원가입 인증 메일이 발송되였습니다.\n이메일에 입력된 인증주소를 확인하여 회원가입을 완료해주세요.</string>
    <string name="confirm">* 인증메일을 인증하지 않으시면 비밀번호 분실 시 비밀번호 확인이 어려울수 있습니다.</string>
    <string name="ok">확 인</string>
</resources>