<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/dialog_bg" android:padding="@dimen/dialog_padding" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/setting_title_text_color" android:gravity="center" android:id="@id/dialog_private_chat_clear_all" android:background="@drawable/white_round_broder_selector" android:layout_width="fill_parent" android:layout_height="@dimen/action_bar_height" android:layout_marginTop="10.0dip" android:text="@string/chat_pop_tv_delete" />
    <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/setting_title_text_color" android:gravity="center" android:id="@id/dialog_private_chat_block_chat" android:background="@drawable/white_round_broder_selector" android:layout_width="fill_parent" android:layout_height="@dimen/action_bar_height" android:layout_marginTop="10.0dip" android:text="@string/block_private" />
    <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/setting_title_text_color" android:gravity="center" android:id="@id/dialog_private_chat_block_topic" android:background="@drawable/white_round_broder_selector" android:layout_width="fill_parent" android:layout_height="@dimen/action_bar_height" android:layout_marginTop="10.0dip" android:text="@string/block_content" />
    <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/setting_title_text_color" android:gravity="center" android:id="@id/dialog_private_chat_add_friends" android:background="@drawable/white_round_broder_selector" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/action_bar_height" android:layout_marginTop="10.0dip" android:text="@string/menuitem_add" />
    <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/setting_title_text_color" android:gravity="center" android:id="@id/dialog_private_chat_report" android:background="@drawable/white_round_broder_selector" android:layout_width="fill_parent" android:layout_height="@dimen/action_bar_height" android:layout_marginTop="10.0dip" android:text="@string/dialog_private_chat_report" />
    <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/hint_text_color" android:gravity="center" android:id="@id/dialog_private_chat_cancel" android:background="@drawable/white_round_broder_selector" android:layout_width="fill_parent" android:layout_height="@dimen/action_bar_height" android:layout_marginTop="10.0dip" android:text="@string/real_search_back" />
</LinearLayout>