<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/container_rl" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="100.0dip">
        <RelativeLayout android:orientation="horizontal" android:id="@id/rl_calendar_top" android:background="@color/square_check_color_normal" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="25.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="25.0dip">
            <ImageView android:id="@id/prevMonth" android:paddingLeft="20.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/prev_month" android:layout_alignParentLeft="true" />
            <TextView android:textSize="@dimen/text_size_eightteen" android:textColor="@color/white" android:id="@id/currentMonth" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
            <ImageView android:id="@id/nextMonth" android:paddingLeft="15.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/next_month_click" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <LinearLayout android:id="@id/rl_calendar_middle" android:background="@color/white" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginRight="25.0dip" android:layout_below="@id/rl_calendar_top">
            <TextView android:textSize="@dimen/text_size_eightteen" android:textColor="@color/setting_title_text_color" android:text="@string/square_sunday" style="@style/weekName" />
            <TextView android:textSize="@dimen/text_size_eightteen" android:textColor="@color/setting_title_text_color" android:text="@string/square_monday" style="@style/weekName" />
            <TextView android:textSize="@dimen/text_size_eightteen" android:textColor="@color/setting_title_text_color" android:text="@string/square_tuesday" style="@style/weekName" />
            <TextView android:textSize="@dimen/text_size_eightteen" android:textColor="@color/setting_title_text_color" android:text="@string/square_wednesday" style="@style/weekName" />
            <TextView android:textSize="@dimen/text_size_eightteen" android:textColor="@color/setting_title_text_color" android:text="@string/square_thursday" style="@style/weekName" />
            <TextView android:textSize="@dimen/text_size_eightteen" android:textColor="@color/setting_title_text_color" android:text="@string/square_friday" style="@style/weekName" />
            <TextView android:textSize="@dimen/text_size_eightteen" android:textColor="@color/setting_title_text_color" android:text="@string/square_saturday" style="@style/weekName" />
        </LinearLayout>
        <ViewFlipper android:id="@id/flipper" android:background="@color/white" android:paddingTop="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginRight="25.0dip" android:layout_below="@id/rl_calendar_middle" />
        <ImageView android:id="@id/iv_calendar_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-10.0dip" android:layout_marginRight="-10.0dip" android:src="@drawable/square_calendar_close" android:layout_alignTop="@id/rl_calendar_top" android:layout_alignRight="@id/rl_calendar_middle" />
    </RelativeLayout>
</RelativeLayout>