<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_bg"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_height"
        android:layout_marginTop="10.0dip"
        android:gravity="center"
        android:text="@string/dlg_wall_change_selecte"
        android:textColor="@color/setting_text_color"
        android:textSize="@dimen/text_size_eightteen" />

    <TextView
        android:id="@id/camera"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_height"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/white_round_broder_selector"
        android:gravity="center"
        android:text="@string/camera"
        android:textColor="@color/setting_title_text_color"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:id="@id/picture"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_height"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/white_round_broder_selector"
        android:gravity="center"
        android:text="@string/dlg_from_picture"
        android:textColor="@color/setting_title_text_color"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:id="@id/system"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_height"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/white_round_broder_selector"
        android:gravity="center"
        android:text="@string/dlg_from_system"
        android:textColor="@color/setting_title_text_color"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:id="@id/cancel"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_height"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/white_round_broder_selector"
        android:gravity="center"
        android:text="@string/real_search_back"
        android:textColor="@color/dialog_cancel_text_color"
        android:textSize="@dimen/title_text_size" />
</LinearLayout>