<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/container_rl" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <TextView android:textSize="@dimen/title_content_text_size" android:textColor="@color/share_ziti_color" android:gravity="left|center" android:layout_width="fill_parent" android:layout_height="@dimen/share_dialog_title_height" android:layout_marginLeft="12.0dip" android:text="@string/share_to" />
        <LinearLayout android:orientation="horizontal" android:id="@id/china_share_scrollview" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/share_rl_qq" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/share_margin_left" android:text="@string/qq_friend" android:drawableTop="@drawable/umeng_socialize_qq_on" android:drawablePadding="5.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/share_rl_qzone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/share_margin_left" android:text="@string/qq_space" android:drawableTop="@drawable/umeng_socialize_qzone_on" android:drawablePadding="5.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/share_rl_sina" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/share_margin_left" android:text="@string/sina_weibo" android:drawableTop="@drawable/umeng_socialize_sina_on" android:drawablePadding="5.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/share_rl_wechat" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/share_margin_left" android:text="@string/weixin_friend" android:drawableTop="@drawable/umeng_socialize_wechat" android:drawablePadding="5.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/share_rl_circle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/share_margin_left" android:text="@string/weixin_cirlce" android:drawableTop="@drawable/umeng_socialize_wxcircle" android:drawablePadding="5.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/foreign_share_ll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="12.0dip">
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/share_rl_facebook" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/share_margin_left" android:text="@string/facebook" android:drawableTop="@drawable/share_facebook" android:drawablePadding="5.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/share_rl_twitter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/share_margin_left" android:text="@string/twitter" android:drawableTop="@drawable/share_twitter" android:drawablePadding="5.0dip" />
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/share_margin_left" android:text="@string/facebook" android:drawableTop="@drawable/share_facebook" android:drawablePadding="5.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/share_margin_left" android:text="@string/facebook" android:drawableTop="@drawable/share_facebook" android:drawablePadding="5.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/share_margin_left" android:text="@string/facebook" android:drawableTop="@drawable/share_facebook" android:drawablePadding="5.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <View android:background="#ffdedede" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="@dimen/share_margin_top" />
        <LinearLayout android:id="@id/share_bottom_ll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginRight="12.0dip">
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/share_rl_tutu" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/share_margin_left" android:text="@string/tutu_friends" android:drawableTop="@drawable/home_tutu_friends" android:drawablePadding="5.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/tv_home_block" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/share_margin_left" android:text="@string/block_content_tip" android:drawableTop="@drawable/home_block_bg" android:drawablePadding="5.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:id="@id/tv_home_report" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/report_content_tip" android:drawableTop="@drawable/home_report_bg" android:drawablePadding="5.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:id="@id/tv_home_like" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/fav" android:drawableTop="@drawable/home_fav_bg_2" android:drawablePadding="5.0dip" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/date_text_size" android:textColor="@color/share_text_color" android:gravity="center" android:id="@id/tv_home_copy" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/copy_link_tip" android:drawableTop="@drawable/home_copy_bg" android:drawablePadding="5.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/dialog_cancel_text_color" android:gravity="center" android:id="@id/share_tv_cancel" android:background="@drawable/share_white_broder_selector" android:layout_width="fill_parent" android:layout_height="@dimen/base_rect_button_height" android:layout_marginTop="@dimen/share_dialog_icon_margin_bottom" android:text="@string/cancle_tip" />
    </LinearLayout>
</RelativeLayout>