<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/dialog_bg" android:padding="@dimen/dialog_padding" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/setting_title_text_color" android:gravity="center" android:id="@id/dialog_push_notify_all_tv" android:background="@drawable/white_round_broder_selector" android:layout_width="fill_parent" android:layout_height="@dimen/action_bar_height" android:layout_marginTop="10.0dip" android:text="@string/news_notification_show_all" />
    <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/setting_title_text_color" android:gravity="center" android:id="@id/dialog_push_notify_follow_tv" android:background="@drawable/white_round_broder_selector" android:layout_width="fill_parent" android:layout_height="@dimen/action_bar_height" android:layout_marginTop="10.0dip" android:text="@string/news_notification_show_follow" />
    <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/setting_title_text_color" android:gravity="center" android:id="@id/dialog_push_unnotify_tv" android:background="@drawable/white_round_broder_selector" android:layout_width="fill_parent" android:layout_height="@dimen/action_bar_height" android:layout_marginTop="10.0dip" android:text="@string/news_notification_unshow" />
    <TextView android:textSize="@dimen/title_text_size" android:textColor="@color/hint_text_color" android:gravity="center" android:id="@id/dialog_push_cancel_tv" android:background="@drawable/white_round_broder_selector" android:layout_width="fill_parent" android:layout_height="@dimen/action_bar_height" android:layout_marginTop="10.0dip" android:text="@string/real_search_back" />
</LinearLayout>